--- a/index.css
+++ b/index.css
@@ -144,6 +144,11 @@
 				transition: 0s;
 				z-index: 4;
 			}
+			.footerbar{
+    				display: block;
+   				width: 100%;
+    				height: 148px;
+			}
             a {
                 text-decoration: none;
             }
