--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@
             .maincontainer {
                 top: 50%;
                 transform: translateY(-50%);
+		    position: relative;
             }
 			.maintext {
 				text-align: center;
