--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,9 @@ nav ul li a {
     transform: scale(1.125);
 }
 }
+.not-furthest-right{
+  border-right: 1px solid var(--clr-primary-400);
+}
 .container {
   display: flex;
   flex-direction: column;
